Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBoolObjTextWrapped.quorum
class main
    action main
        Boolean b = "what?"
    end
end